<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.seniorproject.salleh.Activities.RegistrationActivity"
        >


    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        android:id="@+id/imageView4"
        tools:ignore="ContentDescription"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:gravity="left|center"
        android:text="Re-enter Password"
        android:textColor="@color/sallemBlack"
        app:layout_constraintBottom_toBottomOf="@+id/registeration_txtConfirmPassword"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="@+id/registeration_txtConfirmPassword"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.533" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="left|center"
        android:text="Choose Your Photo"
        android:textColor="@color/sallemBlack"
        app:layout_constraintBottom_toBottomOf="@+id/registration_btnAvatar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/registration_btnAvatar"
        app:layout_constraintVertical_bias="0.625"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:gravity="left|center"
        android:text="Password"
        android:textColor="@color/sallemBlack"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/registeration_txtPassword"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/registeration_txtPassword"
        android:layout_marginBottom="0dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:gravity="left|center"
        android:text="Email"
        android:textColor="@color/sallemBlack"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/registeration_txtemail"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/registeration_txtemail"
        android:layout_marginBottom="0dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:gravity="left|center"
        android:text="Last Name"
        android:textColor="@color/sallemBlack"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/registeration_txtLastName"
        android:layout_marginBottom="0dp"
        app:layout_constraintTop_toTopOf="@+id/registeration_txtLastName"
        android:layout_marginTop="0dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:gravity="left|center"
        android:text="First Name"
        android:textColor="@color/sallemBlack"
        app:layout_constraintBottom_toBottomOf="@+id/registeration_txtfirstName"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/registeration_txtfirstName"
        android:layout_marginTop="0dp"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/registeration_txtfirstName"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.635"
        app:layout_constraintVertical_bias="0.117"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/registeration_txtLastName"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.635"
        app:layout_constraintVertical_bias="0.004"
        app:layout_constraintTop_toBottomOf="@+id/registeration_txtfirstName"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/registeration_txtemail"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.635"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/registeration_txtLastName"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/registeration_txtConfirmPassword"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/registeration_txtPassword"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.635"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/registration_btnAvatar" />

    <EditText
        android:id="@+id/registeration_txtPassword"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.635"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/registeration_txtemail" />

    <Button
        android:id="@+id/Btn_resgisteration"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="462dp"
        android:layout_toEndOf="@+id/lbl_password"
        android:layout_toRightOf="@+id/lbl_password"
        android:background="@color/sallemBlue"
        android:gravity="center"
        android:text="@string/register_label"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/sallemWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.653"
        tools:ignore="HardcodedText" />

    <ImageButton
        android:id="@+id/registration_btnAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:minHeight="65dp"
        android:minWidth="65dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/registeration_txtConfirmPassword"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55"
        app:srcCompat="@drawable/ic_account_circle_black_24dp" />

    <CheckBox
        android:id="@+id/registeration_cbAgree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_agree"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/registration_btnAvatar"
        app:layout_constraintTop_toBottomOf="@+id/registration_btnAvatar" />

    <ProgressBar
        android:id="@+id/registeration_prgSaving"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="306dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="306dp"
        android:layout_marginTop="462dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.653" />

    <ScrollView
        android:layout_width="367dp"
        android:layout_height="80dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="3dp"
        app:layout_constraintBottom_toTopOf="@+id/Btn_resgisteration"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registeration_cbAgree"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:isScrollContainer="false"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_of_use"
            tools:layout_editor_absoluteX="21dp"
            tools:layout_editor_absoluteY="-27dp"

            />
    </ScrollView>


</android.support.constraint.ConstraintLayout>

