<resources>
    <string name="app_name">Salleh</string>
    <string name="app_vision">Easy repair of household needs</string>
    <string name="loading_msg">LOADING…</string>
    <string name="signin_label">Sign in</string>
    <string name="register_label">Register</string>
    <string name="user_name_label">Email </string>
    <string name="password_label">Password </string>
    <string name="confirm_password_label">Confirm Password </string>

    <!-- Adding link to "Forgot Password Label" -->

...
    </string>

    <string name="reset_label">Reset </string>
    <string name="email_label">Email Address </string>
    <string name="first_name_label">First Name  </string>
    <string name="last_name_label">Last Name  </string>
    <string name="i_agree">I Agree to terms of use</string>


    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
...
