<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.seniorproject.salleh.Activities.SignInActivity">

    <ImageView
...
        android:id="@+id/lbl_poster_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name_label"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/sign_in_txt_user_name"
        android:layout_alignBottom="@+id/sign_in_txt_user_name"
        android:layout_alignParentStart="true"
        app:layout_constraintTop_toTopOf="@+id/sign_in_txt_user_name"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/sign_in_txt_user_name"
        android:layout_marginBottom="8dp"
...
